fix link overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-/* Box sizing reset best practice according to https://css-tricks.com/box-sizing/ */
 /*  browser font-size set to 16px so 62.5% = 10px; 1 rem = 10px */
 
 html {
@@ -25,9 +24,6 @@ html {
 }
 
 body {
-  /* height: 100vh;
-  width: 100vw; */
-  /* padding: 1.5rem; */
   font-weight: 400;
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
   position: relative;
@@ -66,7 +62,6 @@ body {
   align-items: center;
   justify-content: center;
   padding: 1rem;
-
   flex-basis: 10%;
 }
 
@@ -74,6 +69,21 @@ body {
   margin-left: 1.5rem;
   font-size: 1.8rem;
   font-weight: 500;
+}
+
+.logo:hover > * {
+  background-image: linear-gradient(
+    to left,
+    violet,
+    indigo,
+    blue,
+    green,
+    orange,
+    red
+  );
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all 0.2s ease-in-out;
 }
 
 /* SIDE PANEL BUTTON */
@@ -151,6 +161,7 @@ body {
 }
 
 /* RESUABLE COMPONENTS */
+
 .cursor {
   cursor: pointer;
 }
@@ -180,6 +191,7 @@ body {
   border-radius: 50px;
   padding: 1.5rem;
   cursor: pointer;
+  transition: all 0.2s;
 }
 
 .btn:hover {
@@ -224,13 +236,14 @@ body {
   font-size: 1.2rem;
   transition: all 0.2s;
   visibility: hidden;
-  min-width: 12rem;
+  width: 12rem;
   background-color: black;
   color: #fff;
   text-align: center;
   border-radius: 6px;
   padding: 0.5rem;
   position: absolute;
+  z-index: 1000;
 }
 
 .tooltip-text {
@@ -243,15 +256,15 @@ body {
 }
 
 .tooltip-si-text {
-  right: 5rem;
+  right: 6.5rem;
   top: 18.5rem;
-  width: 7rem;
+  width: 5rem;
 }
 
 .tooltip-fi-text {
-  right: 5rem;
+  right: 6.5rem;
   top: 28rem;
-  width: 7rem;
+  width: 5rem;
 }
 
 .tooltip-pu-text {
@@ -328,7 +341,16 @@ body {
 .tourist-attraction-box {
   display: flex;
   flex-direction: column;
-  justify-content: stretch;
+}
+
+.tourist-attraction-box a {
+  text-decoration: none;
+  color: inherit;
+  min-width: 5rem;
+  max-width: 40rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .tourist-attraction-box img {
@@ -344,11 +366,11 @@ body {
 
 .tourist-attraction-box > div {
   display: flex;
+  flex-basis: 100%;
   align-items: center;
   margin: 1rem 1rem 1rem 0;
   font-size: 1.5rem;
   padding: 1rem 2rem 1rem 0;
-  width: 100%;
 }
 
 .tourist-attraction-box > div:hover {
@@ -387,42 +409,31 @@ body {
   padding-right: 1rem;
   transition: all 0.2;
   display: none;
-  /* background-color: rgba(0, 0, 0, 0.8); */
 }
 
 .directions-container {
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
-  /* padding-right: 1rem; */
-  overflow-y: overlay;
-  /* display: none; */
-  /* background-color: rgba(0, 0, 0, 0.8); */
-  transition: all 0.2;
-}
 
-/* .mapbox-directions-inputs input {
-  font-size: 1.5rem !important;
+  overflow-y: overlay;
+  transition: all 0.2;
 }
 
 .mapbox-directions-profile label {
   font-size: 1.5rem !important;
-} */
+}
 
 #inputs,
 #errors,
 #directions {
   width: 100%;
-  /* max-width: 300px; */
   min-width: 200px;
 }
 
 #inputs {
   position: relative;
   z-index: 10;
-  /* top: 15px;
-  left: 10px; */
-  /* font-size: 5rem !important; */
 }
 
 #directions {
@@ -453,13 +464,6 @@ body {
   cursor: pointer;
 }
 
-/* LINKS */
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
 /* LEAFLET POPUP STYLE CHANGES */
 
 /* POP UP BOX */
@@ -481,11 +485,14 @@ a {
   font-family: sans-serif !important;
   font-weight: 900 !important;
   color: black;
-  /* background-color: rgba(59, 178, 208, 0.7) !important; */
 }
 
 /* MEDIA QUERIES  */
 @media only screen and (max-width: 375px) {
+  .logo-content {
+    font-size: 1.5rem;
+  }
+
   .side-panel-container {
     width: 85%;
   }
@@ -498,13 +505,20 @@ a {
     padding: 1.2rem;
   }
 
+  .input-box-div {
+    width: 110%;
+    margin: 1rem 1.5rem;
+  }
+
   .input-box {
     margin: 0;
-    padding: 1rem;
+    padding: 1rem 0.5rem;
+    font-size: 1rem;
   }
 
   .search-bar-icon {
-    transform: translateX(-3.7rem);
+    transform: translateX(-5rem);
+    font-size: 1rem;
   }
 
   .search-results {
